--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
   control-api:
     container_name: canada-demo-control-api
-    image: ghcr.io/datalens-tech/datalens-control-api:0.2038.1
+    image: ghcr.io/dmi-feo/dloveryt_control_api:20240218-2
     environment:
       BI_API_UWSGI_WORKERS_COUNT: 4
       CONNECTOR_AVAILABILITY_VISIBLE: "clickhouse,postgres,chyt"
@@ -31,7 +31,7 @@ services:
 
   data-api:
     container_name: canada-demo-data-api
-    image: ghcr.io/datalens-tech/datalens-data-api:0.2038.1
+    image: ghcr.io/dmi-feo/dloveryt_data_api:20240218-2
     environment:
       GUNICORN_WORKERS_COUNT: 5
       RQE_FORCE_OFF: 1
@@ -55,8 +55,9 @@ services:
 
   datalens-ui:
     container_name: canada-demo-ui
-    build:
-      context: datalens-ui
+    image: ghcr.io/dmi-feo/dloveryt_ui:20240218-1
+#    build:
+#      context: datalens-ui
     ports:
       - 8080:80
     depends_on:
@@ -76,10 +77,12 @@ services:
 
   canada:
     container_name: canada
-    build:
-      context: canada
+    image: ghcr.io/dmi-feo/canada:20240218-1
+#    build:
+#      context: canada
     ports:
       - 8888:8888
     environment:
       YT_HOST: ${YT_HOST}
       ROOT_COLLECTION_NODE_ID: ${ROOT_COLLECTION_NODE_ID}
+      YT_AUTH_MODE: ${YT_AUTH_MODE:-disabled}
