--- a/helm/dl-over-yt/values.yaml
+++ b/helm/dl-over-yt/values.yaml
@@ -1,7 +1,7 @@
 docker_images:
   dl_control_api: ghcr.io/dmi-feo/dloveryt_control_api:20240218-2
   dl_data_api: ghcr.io/dmi-feo/dloveryt_data_api:20240218-2
-  dl_ui: ghcr.io/dmi-feo/dloveryt_ui:20240218-1
+  dl_ui: ghcr.io/dmi-feo/dloveryt_ui:20240219-1
   canada: ghcr.io/dmi-feo/canada:20240218-1
 
 num_pods:
@@ -23,4 +23,7 @@ dl_control_api_settings:
 
 dl_data_api_settings:
   gunicorn_worker_num: 4
+
+ingress:
+  host: localhost
 
