helm: add tls support

--- a/helm/dl-over-yt/templates/ingress.yaml
+++ b/helm/dl-over-yt/templates/ingress.yaml
@@ -6,6 +6,12 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
+  {{ if .Values.ingress.tls.enabled }}
+  tls:
+    - hosts:
+        - {{ .Values.ingress.host }}
+      secretName: {{ .Values.ingress.tls.secret_name }}
+  {{ end }}
   rules:
     - host: {{ .Values.ingress.host }}
       http:
