--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
   control-api:
     container_name: canada-demo-control-api
-    image: ghcr.io/dmi-feo/dloveryt_control_api:20240218-2
+    image: ghcr.io/dmi-feo/dloveryt_control_api:20240220-2
     environment:
       BI_API_UWSGI_WORKERS_COUNT: 4
       CONNECTOR_AVAILABILITY_VISIBLE: "clickhouse,postgres,chyt"
@@ -31,7 +31,7 @@ services:
 
   data-api:
     container_name: canada-demo-data-api
-    image: ghcr.io/dmi-feo/dloveryt_data_api:20240218-2
+    image: ghcr.io/dmi-feo/dloveryt_data_api:20240220-2
     environment:
       GUNICORN_WORKERS_COUNT: 5
       RQE_FORCE_OFF: 1
@@ -55,11 +55,11 @@ services:
 
   datalens-ui:
     container_name: canada-demo-ui
-    image: ghcr.io/dmi-feo/dloveryt_ui:20240218-1
+    image: ghcr.io/dmi-feo/dloveryt_ui:20240219-1
 #    build:
 #      context: datalens-ui
     ports:
-      - 8080:80
+      - 8080:8080
     depends_on:
       - canada
       - control-api
@@ -86,3 +86,6 @@ services:
       YT_HOST: ${YT_HOST}
       ROOT_COLLECTION_NODE_ID: ${ROOT_COLLECTION_NODE_ID}
       YT_AUTH_MODE: ${YT_AUTH_MODE:-disabled}
+      CA_FILE: /etc/ssl/certs/ca-certificates.crt
+    volumes:
+      - ./canada-cert:/etc/ssl/certs
