--- a/helm/dl-over-yt/templates/ingress.yaml
+++ b/helm/dl-over-yt/templates/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  ingressClassName: nginx
+  ingressClassName: {{ .Values.ingress.nginx_ingress_class }}
   {{ if .Values.ingress.tls.enabled }}
   tls:
     - hosts:
