--- a/helm/dl-over-yt/values.yaml
+++ b/helm/dl-over-yt/values.yaml
@@ -2,7 +2,7 @@ docker_images:
   dl_control_api: ghcr.io/dmi-feo/dloveryt_control_api:20240220-2
   dl_data_api: ghcr.io/dmi-feo/dloveryt_data_api:20240220-2
   dl_ui: ghcr.io/dmi-feo/dloveryt_ui:20240226-2
-  canada: ghcr.io/dmi-feo/canada:20240226-3
+  canada: ghcr.io/dmi-feo/canada:20240226-4
 
 num_pods:
   dl_control_api: 1
@@ -29,6 +29,10 @@ canada_settings:
     use_custom_cert: false
     config_map_name: null
     config_map_key: null
+
+chyt_integration_settings:
+  connection_id: null
+  temp_dataset_workbook_id: null
 
 ingress:
   host: localhost
