--- a/helm/dl-over-yt/values.yaml
+++ b/helm/dl-over-yt/values.yaml
@@ -1,8 +1,8 @@
 docker_images:
   dl_control_api: ghcr.io/dmi-feo/dloveryt_control_api:20240220-2
   dl_data_api: ghcr.io/dmi-feo/dloveryt_data_api:20240220-2
-  dl_ui: ghcr.io/dmi-feo/dloveryt_ui:20240226-2
-  canada: ghcr.io/dmi-feo/canada:20240226-4
+  dl_ui: ghcr.io/dmi-feo/dloveryt_ui:20240305-1
+  canada: ghcr.io/dmi-feo/canada:0.7.0
 
 num_pods:
   dl_control_api: 1
