--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
 
   datalens-ui:
     container_name: canada-demo-ui
-    image: ghcr.io/dmi-feo/dloveryt_ui:20240306-2
+    image: ghcr.io/dmi-feo/dloveryt/datalens-ui:v0.1407.0
     ports:
       - 8080:8080
     depends_on:
